--- a/Controltest/controltest.ipynb
+++ b/Controltest/controltest.ipynb
@@ -9,8 +9,7 @@
    "source": [
     "%matplotlib notebook\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "impor"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
