Created function for choosing decay function

--- a/controltest-veto-controller.ipynb
+++ b/controltest-veto-controller.ipynb
@@ -71,6 +71,38 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "b69542ad-fd0b-4829-9c7e-c60800ba1ec2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decay_function(func_choice, distance_from_obstacle, current_speed, obstacle_at):\n",
+    "\n",
+    "    # Set default m to be linear if decay function choice is not specified\n",
+    "    m = current_speed / distance_from_obstacle\n",
+    "    \n",
+    "    if func_choice == 'linear':\n",
+    "        m = current_speed / distance_from_obstacle # linear decay\n",
+    "    elif func_choice == 'quadratic':\n",
+    "        m = current_speed / (distance_from_obstacle ** 2 + 1)\n",
+    "    elif func_choice == 'cubic':\n",
+    "        m = (1 - (distance_from_obstacle / obstacle_at)**3) * current_speed\n",
+    "    elif func_choice == 'exponential':\n",
+    "        decay_factor = 60\n",
+    "        m = math.exp(-distance_from_obstacle / decay_factor) * current_speed\n",
+    "    elif  func_choice == 'sigmoid':\n",
+    "        C = 50  # Center point where braking becomes steep\n",
+    "        S = 60   # Slope factor for smooth braking transition\n",
+    "\n",
+    "        m = (1 / (1 + math.exp((distance_from_obstacle - C) / S))) * current_speed\n",
+    "    else:\n",
+    "        return -m * 1000\n",
+    "    \n",
+    "    return -m * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "6b59d908",
    "metadata": {},
    "outputs": [],
@@ -105,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b4d5d7b4-57cb-4cbc-9d89-32a5a9df41d2",
    "metadata": {},
    "outputs": [],
@@ -115,39 +147,17 @@
     "    if distance_from_obstacle > 400:\n",
     "        return throttle\n",
     "    else:\n",
-    "        # speed = 0 at car <= 25 meters\n",
-    "        # m = current_speed / distance_from_obstacle # linear decay\n",
+    "        func_choice = 'sigmoid' # input('Enter your preferred decay function: ')\n",
     "\n",
-    "        # no division by 0\n",
-    "        # m = current_speed / (distance_from_obstacle + 10)\n",
-    "\n",
-    "        # quadratic decay (still relatively linear)\n",
-    "        # m = current_speed / (distance_from_obstacle ** 2 + 1)\n",
-    "\n",
-    "        # exponential decay \n",
-    "        # decay_factor = 60\n",
-    "        # m = math.exp(-distance_from_obstacle / decay_factor) * current_speed\n",
-    "\n",
-    "        # sigmoid function\n",
-    "        C = 50  # Center point where braking becomes steep\n",
-    "        S = 60   # Slope factor for smooth braking transition\n",
-    "\n",
-    "        m = (1 / (1 + math.exp((distance_from_obstacle - C) / S))) * current_speed\n",
-    "\n",
-    "        # cubic decay (too aggressive)\n",
-    "        # m = (1 - (distance_from_obstacle / obstacle_at)**3) * current_speed\n",
-    "\n",
-    "        # logarithmic decay (too aggressive and instant)\n",
-    "        # scale_factor = 20  # Adjust this to control how smoothly it slows down\n",
-    "        # m = math.log(distance_from_obstacle + 1) / scale_factor * current_speed\n",
+    "        m = decay_function(func_choice, distance_from_obstacle, current_speed, obstacle_at)\n",
     "        \n",
-    "        return -m * 1000\n",
+    "        return m\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "afc07dc9-d030-4989-8631-bbd72a18607f",
    "metadata": {},
    "outputs": [],
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9c78ad2c-1bd8-490c-827a-d564b1307863",
    "metadata": {
     "scrolled": true
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "61c6e11a-f734-44dd-98b5-10ceb7f2e979",
    "metadata": {},
    "outputs": [
@@ -222,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "3e8d202e-e855-45fd-a911-eaf41ea385ef",
    "metadata": {},
    "outputs": [
@@ -256,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "80546823-a05b-4a38-9daf-b9df8661c6c0",
    "metadata": {
     "scrolled": true
@@ -274,7 +284,7 @@
        "       [   57.1, -2841.3,  4000.1,     3.8]], shape=(572, 4))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "ae573b8c",
    "metadata": {},
    "outputs": [
